--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
+    "serve": "nodemon src/server.js",
     "lint": "eslint ./ --ignore-path .gitignore --fix",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/words.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
