--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
+JWT_REFRESH_SECRET_KEY=refresh-secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://AndreyRsLang:westorn@rslang.xdwwo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
